src/codegen/snapshots/simpl__codegen__test__compile_let-3.snap
---
source: src/codegen/test.rs
expression: module.print_to_string().to_string()
---
; ModuleID = 'test_compile'
source_filename = "test_compile"

define i1 @toplevel() {
toplevel_entry:
  %not = alloca i1 (i1)*
  store i1 (i1)* @not, i1 (i1)** %not
  %idBool = alloca i1 (i1)*
  store i1 (i1)* @idBool, i1 (i1)** %idBool
  %not1 = load i1 (i1)*, i1 (i1)** %not
  %call = call i1 %not1(i1 true)
  ret i1 %call
}

define i1 @not(i1 %b) {
not_entry:
  %b1 = alloca i1
  store i1 %b, i1* %b1
  %b2 = load i1, i1* %b1
  %cmp = icmp eq i1 %b2, true
  br i1 %cmp, label %then, label %else

then:                                             ; preds = %not_entry
  br label %cont

else:                                             ; preds = %not_entry
  br label %cont

cont:                                             ; preds = %else, %then
  %phi = phi i1 [ false, %then ], [ true, %else ]
  ret i1 %phi
}

define i1 @idBool(i1 %b) {
idBool_entry:
  %b1 = alloca i1
  store i1 %b, i1* %b1
  %b2 = load i1, i1* %b1
  %cmp = icmp eq i1 %b2, true
  br i1 %cmp, label %then, label %else

then:                                             ; preds = %idBool_entry
  br label %cont

else:                                             ; preds = %idBool_entry
  br label %cont

cont:                                             ; preds = %else, %then
  %phi = phi i1 [ true, %then ], [ false, %else ]
  ret i1 %phi
}

