src/codegen/snapshots/simpl__codegen__test__compile_let.snap
---
source: src/codegen/test.rs
expression: res.print_to_string().to_string()
---
; ModuleID = 'test_compile'
source_filename = "test_compile"

define i32 @toplevel() {
entry:
  %x = alloca i32
  store i32 5, i32* %x
  %x1 = load i32, i32* %x
  ret i32 %x1
}

