src/codegen/snapshots/simpl__codegen__test__compile_lit-3.snap
---
source: src/codegen/test.rs
expression: module.print_to_string().to_string()
---
; ModuleID = 'test_compile'
source_filename = "test_compile"

define i1 @toplevel() {
entry:
  ret i1 false
}

