src/codegen/snapshots/simpl__codegen__test__compile_lit-6.snap
---
source: src/codegen/test.rs
expression: module.print_to_string().to_string()
---
; ModuleID = 'test_compile'
source_filename = "test_compile"

define double @toplevel() {
toplevel_entry:
  ret double 4.500000e+00
}

